Fix alignment of icons for deleted groups

--- a/components/automate-ui/src/app/page-components/event-feed-table/event-feed-table.component.scss
+++ b/components/automate-ui/src/app/page-components/event-feed-table/event-feed-table.component.scss
@@ -123,7 +123,7 @@ chef-side-panel {
 
   & > .event-icon {
     position: absolute;
-    top: 23px;
+    top: 16px;
     left: 40px;
   }
 
